# pfa

./: .gitignore  20.html  Bilal_Detection_Engine.pptx  Fiche 01 — Compte rendu #01 de PFA.html  README.md  SWOT_PFA.xlsx  Suivi de Projet (PFA).xlsx  bilal-4h-learning-plan.md  bilal-plan-semaine.md  bilal-weekly-presentation.md  compte-rendu-01.md  cont.txt  detection_engine_explanation.md  plan-semaine-2-detaille.md  pyproject.toml  requirements.txt  week3-review-and-usage.md
Fiche 01 — Compte rendu #01 de PFA_files/: m=viewer_base  rs=AMjVe6heEujz38KjFqaHFKZNHwKVDp0-dQ
datasets/processed/: legit.json  malicious.json
docs/: anomaly_detector.md  api_contract.md  api_main.md  detection_engine.md  examples.json  integration_guide.md  notes-essentielles.md  rate_limiter.md  risks_and_checklist.md  signature_rules.md
scripts/: README.md  benchmark.py  collect_datasets.py  generator.py  parser.py  replay.py
src/: config.py
src/api/: __init__.py  app.py  exceptions.py  models.py  routes.py
src/engine/: __init__.py  anomaly_detector.py  decision_engine.py  detector.py  feature_extractor.py  metrics.py  rate_limiter.py
src/rules/: __init__.py  models.py  normalization.py  signatures.py
tests/: __init__.py  conftest.py  export_requests.py  test_anomaly.py  test_api.py  test_detector.py  test_feature_extractor.py  test_rate_limiter.py  test_signatures.py
